--- a/OT_01_BulkAccessCOGs.ipynb
+++ b/OT_01_BulkAccessCOGs.ipynb
@@ -293,7 +293,7 @@
    },
    "outputs": [],
    "source": [
-    "wget.download('https://www.naturalearthdata.com/http//www.naturalearthdata.com/download/10m/physical/ne_10m_rivers_lake_centerlines.zip','rivers.zip')\n",
+    "wget.download('https://naturalearth.s3.amazonaws.com/10m_physical/ne_10m_rivers_lake_centerlines.zip','rivers.zip')\n",
     "print(\"Success! Downloaded river vector data.\")"
    ]
   },
